--- a/Th19.css
+++ b/Th19.css
@@ -32,26 +32,10 @@ h1{
   padding-left: 20px;
   font-size: 2pc;
   height: 100%;
-  width: 80%;
+  width: 100%;
   float:left;
   border: none;
   outline:none;
-}
-#searchbutton{
-  padding:0px;
-  margin: 0px;
-  height: 80px;
-  width: 20%;
-  text-decoration: none;
-  font-size: 2pc;
-  border: none;
-  outline:none;
-}
-#searchbutton:hover{
-  background-color: rgba(255,255,255, .82);
-}
-#searchbutton:active{
-  background-color: rgba(255,255,255, .95);
 }
 
 ul{
@@ -69,13 +53,25 @@ a:visited {
   text-decoration: none;
 }
 a:hover {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
-#buttondiv{
-  margin-top: 25px;
+.buttondiv{
+  background-color: rgba(255,255,255, .9);
   display: block;
+  float: left;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 10px;;
 }
+
+#buttonWrapper{
+  width:282px;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #percent{
   text-align: center;
   -ms-text-justify: distribute-all-lines;
@@ -89,7 +85,7 @@ a:hover {
 
 #percent > .diffpercent{
   padding: 1px;
-  height:20px;
+  max-height:20px;
   overflow:hidden;
 }
 
@@ -164,12 +160,17 @@ a:hover {
 }
 
 .canvasdiv{
-  width: 80%;
-  height: 70%;
+  max-width: 80%;
+  max-height: 70%;
   text-align: center;
   margin-left:auto;
   margin-right: auto;
+  margin-top: 20px;
   overflow: hidden;
+}
+
+canvas{
+  width: 80%;
 }
 
 #searchWrapper{
@@ -218,6 +219,7 @@ a:hover {
   padding-top:5px;
   padding-bottom:5px;
   width:100%;
+  display: none;
 }
 
 #searchResults > ul > li > a{
@@ -236,4 +238,8 @@ a:hover {
 }
 #searchResults > ul > li:active{
   background-color:  rgba(255,255,255, .82);
+}
+
+#canvas2{
+  display: none;
 }
